k8s/architecture/ingress/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress-test
spec:
  # 指定 ingress-controller 的名字
  ingressClassName: nginx
  rules:
    - host: foo.bar.com
      http:
        paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: service1
              port:
                number: 4200
        - path: /bar
          # 根据 Ingress-controller 来进行实现
          pathType: ImplementationSpecific
          backend:
            service:
              name: service2
              port:
                number: 8080
